<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.HabbitFragment">

    <!-- ✅ Fullscreen Background Image -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:contentDescription="Background image" /> <!-- replace with your image filename -->


    <!-- ✅ Foreground content -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:gravity="top">

        <!-- Horizontal Cards -->
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Card 1 -->
                <LinearLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="24dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/box1"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:text="@string/welcome"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:layout_marginBottom="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:text="@string/grow_healthy_habits_nnourish_your_mind"
                            android:textSize="18sp"
                            android:textColor="@color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/badge"
                        android:scaleType="centerCrop"
                        android:background="@drawable/circle_bg"
                        android:padding="10dp"
                        android:clipToOutline="true"
                        android:contentDescription="Logo" />
                </LinearLayout>

                <!-- Card 2 -->
                <LinearLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="24dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/box2"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:text="@string/hi"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:layout_marginBottom="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:text="@string/stay_consistent_nbuild_your_future"
                            android:textSize="18sp"
                            android:textColor="@color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/badge2"
                        android:scaleType="centerCrop"
                        android:background="@drawable/circle_bg"
                        android:padding="10dp"
                        android:clipToOutline="true"
                        android:contentDescription="Logo" />
                </LinearLayout>

                <!-- Card 3 -->
                <LinearLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="24dp"
                    android:background="@drawable/box3"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:text="@string/reminder"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:layout_marginBottom="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:text="@string/track_progress_ncelebrate_wins"
                            android:textSize="18sp"
                            android:textColor="@color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/badge3"
                        android:scaleType="centerCrop"
                        android:background="@drawable/circle_bg"
                        android:padding="10dp"
                        android:clipToOutline="true"
                        android:contentDescription="Logo" />
                </LinearLayout>

            </LinearLayout>
        </HorizontalScrollView>

        <!-- Circular Progress Donut -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/habitProgress"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:indeterminate="false"
                app:indicatorSize="150dp"
                app:trackThickness="12dp"
                app:trackColor="#B3AEAE"
                app:indicatorColor="@color/primary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/progressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_progress_0"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@id/habitProgress"
                app:layout_constraintBottom_toBottomOf="@id/habitProgress"
                app:layout_constraintStart_toStartOf="@id/habitProgress"
                app:layout_constraintEnd_toEndOf="@id/habitProgress"
                android:gravity="center"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Date Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/saveDateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_date" />
        </LinearLayout>

        <!-- Add Habit -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/rounded_box1"

            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/habitEditText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/enter_a_habit" />

            <Button
                android:id="@+id/addHabitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:backgroundTint="#D1BDFF" />
        </LinearLayout>

        <!-- Habit List -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/habitRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="8dp" />

    </LinearLayout>
</FrameLayout>
